--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url('./background.jpg') bottom center;
+  background: url('./nyancatgif.gif') bottom center;
   background-size: cover;
 }
 
@@ -24,7 +24,7 @@ body,html {
   margin: 1rem;
   font-size: 1.5rem;
   padding: 1rem .5rem;
-  transition: all .07s ease;
+  transition: all 1.07s ease;
   width: 10rem;
   text-align: center;
   color: white;
@@ -33,14 +33,15 @@ body,html {
 }
 
 .playing {
-  transform: scale(1.1);
-  border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
+  transform: scale(3.1);
+  border-color: pink;
+  box-shadow: 0 0 1rem purple;
 }
 
 kbd {
   display: block;
   font-size: 4rem;
+  color: pink;
 }
 
 .sound {
